// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactRefreshLogBox _app syntax error shows logbox 1`] = `
"./pages/_app.js
Error: 
  x Expression expected
   ,----
 3 | return <<Component {...pageProps} />;
   :         ^
   \`----

  x Unexpected token \`jsx name (Component)\`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint,
  | string, regexp, \` for template literal, (, or an identifier
   ,----
 3 | return <<Component {...pageProps} />;
   :          ^^^^^^^^^
   \`----

Caused by:
    0: failed to process input file
    1: Parser config: Es(EsConfig { jsx: true, fn_bind: false, decorators: false, decorators_before_export: false, export_default_from: false, import_assertions: true, private_in_object: false, allow_super_outside_method: false })
    2: Syntax Error"
`;

exports[`ReactRefreshLogBox _document syntax error shows logbox 1`] = `
"./pages/_document.js
Error: 
  x Unexpected token \`{\`. Expected identifier, string literal, numeric literal or [ for the computed key
   ,----
 4 | class MyDocument extends Document {{
   :                                    ^
   \`----

Caused by:
    0: failed to process input file
    1: Parser config: Es(EsConfig { jsx: true, fn_bind: false, decorators: false, decorators_before_export: false, export_default_from: false, import_assertions: true, private_in_object: false, allow_super_outside_method: false })
    2: Syntax Error"
`;
